<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/my_info"
            android:icon="@mipmap/ic_set_myinfo"
            android:title="@string/my_info" />
        <item
            android:id="@+id/change_password"
            android:icon="@mipmap/ic_set_change"
            android:title="@string/change_password" />
        <item
            android:id="@+id/message"
            android:icon="@mipmap/ic_set_msg"
            android:title="@string/message_setting" />

        <item
            android:id="@+id/about"
            android:icon="@mipmap/ic_set_about"
            android:title="@string/about" />

        <item
            android:id="@+id/other"
            android:icon="@mipmap/ic_set_other"
            android:title="@string/share_apk" />
</menu>
