<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:hyphenate="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/tools"
	android:background="@color/windowBackg"
	android:orientation="vertical">
    <include layout="@layout/view_include_toolbar" />


	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/spacing_h">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/spacing_h"
			android:orientation="vertical">

			<android.support.design.widget.TextInputLayout
				android:id="@+id/til_old_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:counterOverflowTextAppearance="@style/MyErrorStyle">

				<com.supersit.common.widget.edittext.AutoCheckEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:drawableEnd="@mipmap/ic_gay_delete"
					android:singleLine="true"
					style="@style/CommonText"
					android:hint="@string/enter_old_password"/>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/til_new_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp">

				<com.supersit.common.widget.edittext.AutoCheckEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:drawableEnd="@mipmap/ic_gay_delete"
					android:singleLine="true"
					style="@style/CommonText"
					android:inputType="textPassword"
					android:hint="@string/enter_new_password"/>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/til_new_password2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp">

				<com.supersit.common.widget.edittext.AutoCheckEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:drawableEnd="@mipmap/ic_gay_delete"
					android:singleLine="true"
					style="@style/CommonText"
					android:inputType="textPassword"
					android:hint="@string/enter_password_again"/>

			</android.support.design.widget.TextInputLayout>

		</LinearLayout>

	</android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:layout_margin="@dimen/spacing_h"
            style="@style/CommonButton"
            android:text="@string/confirm" />

</LinearLayout>
