<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_splash"
    android:gravity="center"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_h"
        android:src="@mipmap/ic_login_logo" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_h">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_h"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterOverflowTextAppearance="@style/MyErrorStyle">

                <com.supersit.common.widget.edittext.AutoCheckEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_gay_delete"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_xh"
                    android:textColor="@color/textColor"
                    android:digits="@string/edit_digits"
                    android:hint="@string/username"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterOverflowTextAppearance="@style/MyErrorStyle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="multiply"
                app:hintEnabled="true">

                <com.supersit.common.widget.edittext.AutoCheckEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_xh"
                    android:textColor="@color/textColor"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_h"
            android:gravity="center"
            style="@style/CommonButton"
            android:onClick="login"
            android:text="@string/login"
            android:textSize="@dimen/text_size_h" />

</LinearLayout>